Single person staff slider wrap-preventer

--- a/content/themes/dude/sass/views/_person.scss
+++ b/content/themes/dude/sass/views/_person.scss
@@ -466,6 +466,21 @@ body {
               padding-bottom: 8rem;
             }
 
+            .staff {
+              height: 100%;
+              overflow: hidden;
+              white-space: nowrap;
+
+              @media(min-width: 1200px) {
+                height: 490px;
+
+                // Hack to prevent element items from wrapping to emptiness
+                .wrap-preventer {
+                  min-width: 1000px;
+                }
+              }
+            }
+
             .col {
               @include span(1/3);
               height: 490px;
